# llm-observability-analytics

./: .codecov.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  contract-consistency.yml  release-from-main.yml  sync-project-issues.yml
configs/: base.yaml
docs/: architecture.md  contract-consistency.md  data-contracts.md  integration.md  release-process.md  shared-contract-summary.json
examples/: README.md
examples/integration/: README.md  input_from_ingestion_chunks.jsonl  output_for_dataset_foundry_interactions.jsonl  output_for_dataset_foundry_retrieval_traces.jsonl
scripts/: bootstrap.ps1  sync_project_issues.py  validate_shared_contracts.py
src/llm_observability_analytics/: __init__.py
src/llm_observability_analytics/cli/: __init__.py  main.py
src/llm_observability_analytics/contracts/: __init__.py  entities.py  models.py
src/llm_observability_analytics/events/: __init__.py  interfaces.py  loader.py
src/llm_observability_analytics/metrics/: __init__.py  models.py
src/llm_observability_analytics/pipeline/: __init__.py  config.py
src/llm_observability_analytics/reports/: __init__.py  specs.py
src/llm_observability_analytics/storage/: __init__.py  interfaces.py
src/llm_observability_analytics/traces/: __init__.py  models.py
tests/: test_cli.py  test_contracts.py  test_events_loader.py  test_module_basics.py  test_package.py  test_pipeline_config.py
