[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-observability-analytics"
version = "0.1.0"
description = "Observability and analytics layer for LLM systems"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "LLM Data Platform Team" }]
keywords = ["llm", "observability", "analytics", "traces", "telemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
llm-observability = "llm_observability_analytics.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --disable-warnings --cov=llm_observability_analytics --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["llm_observability_analytics"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.coverage.xml]
output = "coverage.xml"
